--- a/articles/templates/articles/article_detail.html
+++ b/articles/templates/articles/article_detail.html
@@ -1,8 +1,7 @@
 {% extends "base.html" %}
 {% load static %}
 {% block extrastyles %}
-<link rel="stylesheet" type="text/css" href="{% static 'articles/bigfoot/bigfoot-default.css' %}">
-
+<link rel="stylesheet" type="text/css" href="{% static 'articles/bigfoot/bigfoot-bottom.css' %}">
 </style>
 <style type="text/css" media="screen">
     article {
@@ -43,6 +42,8 @@
 {% block extrajs %}
     <script src="{% static 'articles/bigfoot/bigfoot.min.js' %}" type="text/javascript"></script>
     <script type="text/javascript">
-        $.bigfoot();
+        $.bigfoot({
+            positionContent:false,
+        });
     </script>
 {% endblock extrajs %}
