--- a/articles/templates/articles/article_list.html
+++ b/articles/templates/articles/article_list.html
@@ -2,7 +2,7 @@
 {% block main_content %}
 {% for article in object_list %}
     <div>
-        <h1><a href="{% url "articles:article-detail" article.pk article.slug %}" title="">{{article.headline}}</a></h1>
+        <h1 class="headline"><a href="{% url "articles:article-detail" article.pk article.slug %}" title="">{{article.headline}}</a></h1>
         <p class="author">{{ article.author }}</p>
         {{ article.body|safe }}
     </div>
