--- a/templates/base.html
+++ b/templates/base.html
@@ -6,14 +6,15 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Denver Law Review{% block title %}{% endblock title %}</title>
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+        <link rel="stylesheet" type="text/css" href="{% static '/css/bootstrap.min.css' %}">
+        <link rel="stylesheet" type="text/css" href="{% static '/css/main.css' %}">
         {% block extrastyles %}
         {% endblock extrastyles %}
     </head>
     <body>
         <div class="container">
             <div class="row">
-                <img class="img-responsive" src="{% static 'DLRBannerLogo.png' %}" alt="Denver Law Review">
+                <img class="img-responsive" src="{% static '/img/DLRBannerLogo.png' %}" alt="Denver Law Review">
             </div>
             <nav class="navbar navbar-default">
                 <!-- Brand and toggle get grouped for better mobile display -->
@@ -28,13 +29,13 @@
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav">
-                        <li class="dropdown">
-                            <a href="{% url "articles:article-list" %}" class="pull-left">Articles</a><b class="dropdown-toggle pull-left" data-toggle="dropdown" role="button" aria-haspopup="true" aria=expanded="false"><span class="caret"></span></b>
-                            <ul class="dropdown-menu">
-                                <li><a href="{% url "articles:print-issue-list" %}">Print Issues</a></li>
-                                <li><a href="{% url "articles:online-issue-list" %}">Special Issues</a></li>
-                            </ul>
-                        </li>
+                        <li><a href="" title="">Home</a></li>
+                        <li><a href="" title="">Print Issues</a></li>
+                        <li><a href="" title="">Special Features</a></li>
+                        <li><a href="#">Symposia</a></li>
+                        <li><a href="#" title="">News &amp; Events</a></li>
+                    </ul>
+                    <ul class="nav navbar-nav navbar-right">
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">About <span class="caret"></span></a>
                             <ul class="dropdown-menu">
@@ -44,15 +45,7 @@
                                 <li><a href="#">Candidacy</a></li>
                             </ul>
                         </li>
-                        <li><a href="#">Symposia</a></li>
-                        <li><a href="#" title="">News &amp; Events</a></li>
                     </ul>
-                    <form class="navbar-form navbar-right">
-                        <div class="form-group">
-                            <input type="text" class="form-control" placeholder="Search">
-                        </div>
-                        <button type="submit" class="btn btn-default">Submit</button>
-                    </form>
                 </div><!-- /.navbar-collapse -->
             </nav>
             <div class="row">
@@ -60,13 +53,13 @@
                     {% block main_content %}
                     {% endblock main_content %}
                 </div>
-                <div class="col-lg-4 col-md-4">
+                <div class="well col-lg-4 col-md-4">
                     <h2>This is a sidebar.</h2>
                 </div>
             </div>
         </div>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+        <script src="{% static '/js/boostrap.min.js' %}" type="text/javascript" charset="utf-8"></script>
         {% block extrajs %}
 
         {% endblock extrajs %}
