--- a/articles/templates/articles/onlineissue_list.html
+++ b/articles/templates/articles/onlineissue_list.html
@@ -1,4 +1,6 @@
 {% extends "base.html" %}
 {% block main_content %}
-    <h1>{{object.title}}</h1>
+    {% for online_issue in online_issues %}
+        <h1>{{ online_issue.title }}</h1>
+    {% endfor %}
 {% endblock main_content %}
