--- a/articles/templates/articles/printissue_list.html
+++ b/articles/templates/articles/printissue_list.html
@@ -1,4 +1,6 @@
 {% extends "base.html" %}
 {% block main_content %}
-    <h1>{{object.title}}</h1>
+{% for print_issue in print_issues %}
+    <h1>Volume {{ print_issue.volume }}, Issue {{ print_issue.issue }}</h1>
+{% endfor %}
 {% endblock main_content %}
