--- a/articles/templates/articles/category_detail.html
+++ b/articles/templates/articles/category_detail.html
@@ -2,10 +2,6 @@
 {% block main_content %}
     <h1>{{ category.title }}</h1>
     {% for article in category.article_set.all %}
-        <div class="row">
-            <div class="col-xs-12">
-                <h2><a href="{% url 'articles:article-detail' article.pk article.slug %}" title="{{ article.headline }}">{{ article.headline }}</a></h2>
-            </div>
-        </div>
+        {% include 'articles/includes/article_preview.html' %}
     {% endfor %}
 {% endblock main_content %}
