--- a/articles/templates/articles/printissue_list.html
+++ b/articles/templates/articles/printissue_list.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% block main_content %}
+<h1>Print Issues of the Denver Law Review</h1>
 {% for print_issue in print_issues %}
-    <h1>Volume {{ print_issue.volume }}, Issue {{ print_issue.issue }}</h1>
+    <h3><a href="{% url 'articles:print-issue-detail' print_issue.pk %}">Volume {{ print_issue.volume }}, Issue {{ print_issue.issue }}</a></h3>
 {% endfor %}
 {% endblock main_content %}
