--- a/articles/templates/articles/article_list.html
+++ b/articles/templates/articles/article_list.html
@@ -1,22 +1,9 @@
 {% extends "base.html" %}
 {% block main_content %}
 {% for article in articles %}
-    <div class="row">
-        <div class="col-xs-12">
-            <h1 class="headline"><a href="{% url 'articles:article-detail' article.pk article.slug %}" title="">{{article.headline}}</a></h1>
-            <div class="row small">
-                <div class="col-xs-6">
-                    <p>{{ article.author }} | {{ article.pub_date }}</p>
-                </div>
-                <div class="col-xs-6 text-right">
-                    <p><a href="{% url 'articles:category-detail' article.category.pk article.category.slug %}" class="label label-default">{{ article.category.title }}</a></p>
-                </div>
-            </div>
-            {{ article.blurb|safe }}
-        {% if not forloop.last %}
-            <hr />
-        {% endif %}
-        </div>
-    </div>
+    {% include 'articles/includes/article_preview.html' %}
+    {% if not forloop.last %}
+        <hr />
+    {% endif %}
 {% endfor %}
 {% endblock main_content %}
