--- a/articles/templates/articles/onlineissue_list.html
+++ b/articles/templates/articles/onlineissue_list.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% block main_content %}
+    <h1>Online Special Issues</h1>
     {% for online_issue in online_issues %}
-        <h1>{{ online_issue.title }}</h1>
+        <h3><a href="{% url 'articles:online-issue-detail' online_issue.pk online_issue.slug %}">{{ online_issue.title }}</a></h3>
     {% endfor %}
 {% endblock main_content %}
