--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,4 +1,4 @@
-* {
+/** {
     font-family: Georgia, "Times New Roman", Times, serif;
 }
 p {
@@ -8,3 +8,8 @@ p {
     text-align: center;
     font-variant: small-caps;
 }
+
+#footer {
+    background: white;
+    border-top: 1px solid black;
+}*/
