general style changes

--- a/templates/announcements/announcement_detail.html
+++ b/templates/announcements/announcement_detail.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "two-col.html" %}
 {% block main_content %}
     <h1>{{ announcement.headline }}</h1>
     <p class="small">
