--- a/templates/announcements/announcement_list.html
+++ b/templates/announcements/announcement_list.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "two-col.html" %}
 {% block main_content %}
     {% for announcement in announcements %}
         <p> {{ announcement.pub_date }} </p>
