--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,15 +1,90 @@
-/** {
-    font-family: Georgia, "Times New Roman", Times, serif;
-}
-p {
-    text-align: justify;
-}
-.headline {
-    text-align: center;
-    font-variant: small-caps;
+@import url('https://fonts.googleapis.com/css?family=Libre+Baskerville:700');
+
+html {
+  font-size: 16px; /* font-size 1em = 10px on default browser settings */
 }
 
-#footer {
-    background: white;
-    border-top: 1px solid black;
-}*/
+.main-branding {
+    font-family: 'Libre Baskerville', serif;
+    color: #8B2332;
+    font-size: 4.5rem;
+    font-variant: small-caps;
+}
+.main-branding img {
+    max-height: 100px;
+    display: inline;
+}
+article h1 {
+    font-size: 1.5rem;
+    font-weight: bold;
+    text-align: center;
+    text-decoration: underline;
+    font-variant: small-caps;
+}
+article h2 {
+    font-size: 1.5rem;
+    font-weight: bold;
+    text-align: left;
+    text-decoration: underline;
+}
+article h3 {
+    font-size: 1.35rem;
+    text-align: left;
+    font-weight: normal;
+    font-style: italic;
+}
+article h4 {
+    font-size: 1.2rem;
+    font-weight: normal;
+    text-align: left;
+    text-decoration: underline;
+}
+article h5 {
+    font-size: 1.15rem;
+    font-weight: normal;
+    text-align: left;
+    font-style: italic;
+    text-decoration: underline;
+}
+article h6 {
+    font-size: 1rem;
+    font-weight: bold;
+    text-align: left;
+    font-variant: small-caps;
+}
+#article-list article h1 {
+    font-size: 2rem;
+}
+h1.headline {
+    color: #8B2332;
+    font-size: 3rem;
+    text-align: center;
+    font-style: italic;
+    font-weight: normal;
+    text-decoration: none;
+    font-variant: normal;
+}
+article h1.headline a {
+    color: #8B2332;
+}
+article p {
+    text-align: justify;
+}
+#col-main {
+    border-right: 1px solid #eee;
+}
+#col-sidebar {
+    font-size: 1rem;
+}
+#col-sidebar h1 {
+    font-size: 1.5rem;
+}
+#col-sidebar h2 {
+    font-size: 1.3rem;
+}
+#col-sidebar h3 {
+    font-size: 1.15rem;
+}
+#col-sidebar h4 {
+    font-size: 1rem;
+}
