--- a/templates/articles/category_detail.html
+++ b/templates/articles/category_detail.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "two-col.html" %}
 {% block main_content %}
     <h1>{{ category.title }}</h1>
     {% for article in category.article_set.all %}
