--- a/templates/articles/onlineissue_detail.html
+++ b/templates/articles/onlineissue_detail.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "two-col.html" %}
 {% block main_content %}
     <h1>{{ online_issue.title }}</h1>
     {{ online_issue.introduction|safe }}
