--- a/templates/flatpages/default.html
+++ b/templates/flatpages/default.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "two-col.html" %}
 {% block main_content %}
     <h1>{{ flatpage.title }}</h1>
     {{ flatpage.content }}
