--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,17 +1,34 @@
 @import url('https://fonts.googleapis.com/css?family=Libre+Baskerville:700');
-
 html {
   font-size: 16px; /* font-size 1em = 10px on default browser settings */
 }
+body {
+    padding-top: 70px;
+}
+@media (min-width: 768px) {
+    .navbar .navbar-nav {
+        display: inline-block;
+        float: none;
+        vertical-align: top;
+    }
 
+    .navbar .navbar-collapse {
+        text-align: center;
+    }
+}
+header {
+    border-bottom: 5px double #8B2332;
+    border-top: 5px double #8B2332;
+    margin-bottom: 10px;
+}
 .main-branding {
     font-family: 'Libre Baskerville', serif;
     color: #8B2332;
-    font-size: 4.5rem;
+    font-size: 3.5rem;
     font-variant: small-caps;
 }
 .main-branding img {
-    max-height: 100px;
+    max-height: 80px;
     display: inline;
 }
 article h1 {
@@ -54,6 +71,7 @@ article h6 {
 }
 #article-list article h1 {
     font-size: 2rem;
+    text-align: left;
 }
 h1.headline {
     color: #8B2332;
@@ -64,14 +82,18 @@ h1.headline {
     text-decoration: none;
     font-variant: normal;
 }
-article h1.headline a {
-    color: #8B2332;
-}
 article p {
     text-align: justify;
 }
+.homepage-card {
+    min-height: 150px;
+    border: 1px solid #eee;
+}
+.homepage-card h1 {
+    font-size: 1.25rem;
+}
 #col-main {
-    border-right: 1px solid #eee;
+    border-right: 3px double #eee;
 }
 #col-sidebar {
     font-size: 1rem;
