--- a/templates/articles/article_detail.html
+++ b/templates/articles/article_detail.html
@@ -8,7 +8,7 @@
     <div class="col-xs-12 col-sm-12 col-md-8 col-lg-8 col-md-offset-2 col-lg-offset-2">
         <article id="top">
             <h1 class="headline">{{article.headline}}</h1>
-            <p class="small">{{article.pub_date}} | <a href="{% url 'articles:category-detail' article.category.pk article.category.slug %}" class="label label-default">{{article.category.title}}</a></p>
+            <p class="small">{{article.pub_date}}{% if article.category %} | <a href="{% url 'articles:category-detail' article.category.pk article.category.slug %}" class="label label-default">{{article.category.title}}</a>{% endif %}</p>
             <p class="author">By <a href="#author_bio">{{article.author}}</a></p>
             {{article.body|safe}}
             <p class="text-right">
